fix alignment of drop container

--- a/app/assets/stylesheets/modules/_container.scss
+++ b/app/assets/stylesheets/modules/_container.scss
@@ -1,7 +1,7 @@
 .drop-container{
   position: absolute;
   left: 50%;
-  margin-left: -590px;
+  margin-left: -570px;
   top: 50%;
   margin-top: -380px;
   width: 1140px;
